fix: fixed log and config